kubernetes/apps/network/cloudflared/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik-external-network
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
            - port: "8443"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.v2.argotunnel.com"
      toPorts:
        - ports:
            - port: "7844"
              protocol: UDP
